--- a/package.json
+++ b/package.json
@@ -1,18 +1,18 @@
 {
-    "name": "sistema-inventario-oficina",
+    "name": "sistema-controle-pecas",
     "version": "1.0.0",
-    "description": "Sistema de controle de peças para oficina",
-    "main": "server.js",
+    "description": "Sistema de controle de inventário para oficina",
+    "main": "api/index.js",
     "scripts": {
-        "start": "node server.js",
-        "dev": "nodemon server.js"
+        "dev": "vercel dev",
+        "deploy": "vercel deploy --prod"
     },
     "dependencies": {
         "express": "^4.18.2",
-        "mongoose": "^7.5.0",
+        "mongodb": "^5.7.0",
         "cors": "^2.8.5"
     },
     "devDependencies": {
-        "nodemon": "^3.0.1"
+        "vercel": "^30.0.0"
     }
 }
