--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
     "version": 2,
     "builds": [
         {
-            "src": "api/index.js",
+            "src": "api/**/*.js",
             "use": "@vercel/node"
         },
         {
@@ -12,6 +12,14 @@
     ],
     "routes": [
         {
+            "src": "/api/pecas",
+            "dest": "/api/pecas.js"
+        },
+        {
+            "src": "/api/pecas/(.*)",
+            "dest": "/api/pecas/[id].js"
+        },
+        {
             "src": "/api/(.*)",
             "dest": "/api/index.js"
         },
@@ -19,5 +27,8 @@
             "src": "/(.*)",
             "dest": "/public/$1"
         }
-    ]
+    ],
+    "env": {
+        "NODE_ENV": "production"
+    }
 }
